GNOME Bugzilla – Bug 660966
Fix dlopening libdbus-glib-1 on OpenBSD
Last modified: 2011-12-01 11:05:02 UTC
Created attachment 198311 [details] [review] fix soname on OpenBSD Hi. OpenBSD's library naming scheme differs from Linux, it only uses X.Y versionning (e.g. libfoo.so.1.0). Asking ld.so to dlopen libfoo.so will result in openning the highest available version of libfoo.so.X.Y; asking to open libfoo.so.X will just fail. More details here: https://bugzilla.gnome.org/show_bug.cgi?id=660523 http://www.openbsd.org/faq/ports/specialtopics.html#SharedLibs ok to push?
Anyone?
Sorry about the delay.