Fix dlopening libdbus-glib-1 on OpenBSD.

OpenBSD's library naming scheme differs from Linux, it only uses X.Y
versionning.

https://bugzilla.gnome.org/show_bug.cgi?id=660966